--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "keyAdminOnly": "",
     "commandDisabled": [
         "xvideo",
-        "",
+        "dua",
         "",
         "",
         "",
@@ -25,7 +25,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "بنگالی بابا",
+    "BOTNAME": "نشیلی آنکھوں والی",
     "PREFIX": ".",
     "OTHERBOT": [
         ""
