--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100091958496925%22%3A%22aPQxMo3j%22%2C%2261553710430834%22%3A%22IVT59Hyx%22%2C%2261552207033644%22%3A%226VFKIZ75%22%2C%22100081666666939%22%3A%22CULCYmgU%22%2C%2261557122355666%22%3A%22jqGh44Wm%22%7D",
+        "value": "%7B%2261553710430834%22%3A%22IVT59Hyx%22%2C%2261557122355666%22%3A%22jqGh44Wm%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "zsh",
@@ -68,44 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
-    },
-    {
-        "key": "wd",
-        "value": "412x804",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
-    },
-    {
-        "key": "fr",
-        "value": "1KxexcOaDzbIhv5mi.AWVmr4Lubs6w4pV7KP61YtaoNdM.BmKhzl..AAA.0.0.BmK4XL.AWXIAuUetfQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61552207033644",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
-    },
-    {
-        "key": "xs",
-        "value": "37%3A-u7W914dYZ1WAQ%3A2%3A1714128332%3A-1%3A7717",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "locale",
@@ -113,34 +77,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
-        "key": "m_page_voice",
-        "value": "61552207033644",
+        "key": "m_pixel_ratio",
+        "value": "1.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
+    },
+    {
+        "key": "wd",
+        "value": "412x804",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
+    },
+    {
+        "key": "fr",
+        "value": "1KxexcOaDzbIhv5mi.AWWuskZBIUPWDvab7G_3QsGgJt4.BmKhzl..AAA.0.0.BmK7-x.AWVXWlKnHXc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100091958496925",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
+    },
+    {
+        "key": "xs",
+        "value": "44%3AI0RjWaQofFOJ3g%3A2%3A1714143155%3A-1%3A5918",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "fbl_st",
-        "value": "101039943%3BT%3A28569022",
+        "value": "101033313%3BT%3A28569052",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2480%3Btimestamp%3A1714141348",
+        "value": "v2%3Bclient_version%3A2480%3Btimestamp%3A1714143158",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-26T14:22:35.760Z",
-        "lastAccessed": "2024-04-26T14:22:35.760Z"
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "100091958496925",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-26T14:52:49.390Z",
+        "lastAccessed": "2024-04-26T14:52:49.390Z"
     }
 ]
